--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     LOAD_PCT: 29.41176
   response: 7E80341044B
+- expected_values:
+    LOAD_PCT: 45.88235
+  response: '7E803410475'
