--- a/tests/test_cases/2021/commands/7E0.0105.yaml
+++ b/tests/test_cases/2021/commands/7E0.0105.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
+    ECT: 39
+  response: 7E80341054F
+- expected_values:
     ECT: 89
   response: '7E803410581'
 - expected_values:
