--- a/tests/test_cases/2021/commands/7E0.010B.yaml
+++ b/tests/test_cases/2021/commands/7E0.010B.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.010B
 test_cases:
 - expected_values:
+    MAP: 88
+  response: 7E803410B58
+- expected_values:
     MAP: 95
   response: 7E803410B5F
 - expected_values:
