--- a/tests/test_cases/2021/commands/7E0.010C.yaml
+++ b/tests/test_cases/2021/commands/7E0.010C.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.010C
 test_cases:
 - expected_values:
+    RPM: 770
+  response: 7E804410C0C08
+- expected_values:
     RPM: 774
   response: 7E804410C0C18
 - expected_values:
