--- a/tests/test_cases/2021/commands/7E0.010F.yaml
+++ b/tests/test_cases/2021/commands/7E0.010F.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.010F
 test_cases:
 - expected_values:
+    IAT: 23
+  response: 7E803410F3F
+- expected_values:
     IAT: 34
   response: 7E803410F4A
 - expected_values:
