--- a/tests/test_cases/2021/commands/7E0.0145.yaml
+++ b/tests/test_cases/2021/commands/7E0.0145.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0145
 test_cases:
 - expected_values:
+    TP_R: 14.90196
+  response: '7E803414526'
+- expected_values:
     TP_R: 16.07843
   response: '7E803414529'
 - expected_values:
