--- a/tests/test_cases/2021/commands/7E0.0111.yaml
+++ b/tests/test_cases/2021/commands/7E0.0111.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.0111
 test_cases:
 - expected_values:
+    TP: 24.31373
+  response: 7E80341113E
+- expected_values:
     TP: 25.09804
   response: '7E803411140'
 - expected_values:
