--- a/tests/test_cases/2021/commands/7E0.0142.yaml
+++ b/tests/test_cases/2021/commands/7E0.0142.yaml
@@ -24,3 +24,9 @@ test_cases:
 - expected_values:
     VPWR: 14.58
   response: 7E804414238F4
+- expected_values:
+    VPWR: 14.62
+  response: 7E8044142391C
+- expected_values:
+    VPWR: 14.7
+  response: 7E8044142396C
