--- a/tests/test_cases/2021/commands/7E0.2211C5.yaml
+++ b/tests/test_cases/2021/commands/7E0.2211C5.yaml
@@ -1,8 +1,14 @@
 command_id: 7E0.2211C5
 test_cases:
 - expected_values:
-    VOLKSWAGEN_OIL_MIN: 18.24
-  response: 7E8056211C511D0
+    VOLKSWAGEN_OIL_MIN: 13.16
+  response: 7E8056211C50CDA
+- expected_values:
+    VOLKSWAGEN_OIL_MIN: 15.424
+  response: 7E8056211C50F10
+- expected_values:
+    VOLKSWAGEN_OIL_MIN: 16.32
+  response: 7E8056211C50FF0
 - expected_values:
     VOLKSWAGEN_OIL_MIN: 18.852
   response: 7E8056211C51269
