--- a/tests/test_cases/2021/commands/7E1.223887.yaml
+++ b/tests/test_cases/2021/commands/7E1.223887.yaml
@@ -1,14 +1,17 @@
 command_id: 7E1.223887
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ODO_TCM_2_HD: 73113.6
+  response: 7E90762388700280B00
+- expected_values:
     VOLKSWAGEN_ODO_TCM_2_HD: 67891.2
   response: 7E907623887005C0A00
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 70139.8
-  response: 7E907623887D6B30A00
+    VOLKSWAGEN_ODO_TCM_2_HD: 72438.6
+  response: 7E907623887A20D0B00
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 66327.5
-  response: 7E907623887EB1E0A00
+    VOLKSWAGEN_ODO_TCM_2_HD: 71881.4
+  response: 7E907623887DEF70A00
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 68505.5
-  response: 7E907623887FF730A00
+    VOLKSWAGEN_ODO_TCM_2_HD: 72831.9
+  response: 7E907623887FF1C0B00
