--- a/tests/test_cases/2021/commands/7E0.0105.yaml
+++ b/tests/test_cases/2021/commands/7E0.0105.yaml
@@ -4,6 +4,9 @@ test_cases:
     ECT: 39
   response: 7E80341054F
 - expected_values:
+    ECT: 68
+  response: 7E80341056C
+- expected_values:
     ECT: 89
   response: '7E803410581'
 - expected_values:
