--- a/tests/test_cases/2021/commands/7E0.0110.yaml
+++ b/tests/test_cases/2021/commands/7E0.0110.yaml
@@ -7,5 +7,8 @@ test_cases:
     MAF: 8.13
   response: 7E8044110032D
 - expected_values:
+    MAF: 10.13
+  response: 7E804411003F5
+- expected_values:
     MAF: 12.22
   response: 7E804411004C6
