--- a/tests/test_cases/2021/commands/7E0.0123.yaml
+++ b/tests/test_cases/2021/commands/7E0.0123.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     FRP: 36740
   response: 7E80441230E5A
+- expected_values:
+    FRP: 56080
+  response: 7E804412315E8
