--- a/tests/test_cases/2021/commands/7E0.0145.yaml
+++ b/tests/test_cases/2021/commands/7E0.0145.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     TP_R: 17.64706
   response: 7E80341452D
+- expected_values:
+    TP_R: 27.45098
+  response: '7E803414546'
