--- a/tests/test_cases/2021/commands/7E0.0149.yaml
+++ b/tests/test_cases/2021/commands/7E0.0149.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     APP_D: 16.86275
   response: 7E80341492B
+- expected_values:
+    APP_D: 23.92157
+  response: 7E80341493D
