--- a/tests/test_cases/2021/commands/7E0.014A.yaml
+++ b/tests/test_cases/2021/commands/7E0.014A.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     APP_E: 16.47059
   response: 7E803414A2A
+- expected_values:
+    APP_E: 25.09804
+  response: 7E803414A40
