--- a/tests/test_cases/2022/commands/7E0.7E8.22F431.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22F431.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_CLR_DIST: 2889
   response: 7E80562F4310B49
+- expected_values:
+    VOLKSWAGEN_CLR_DIST: 3176
+  response: 7E80562F4310C68
