--- a/tests/test_cases/2021/commands/710.77A.222A0E.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0E.yaml
@@ -10,5 +10,8 @@ test_cases:
     VOLKSWAGEN_SSB_R: 5.4
   response: 77A04622A0E1B
 - expected_values:
+    VOLKSWAGEN_SSB_R: 5.6
+  response: 77A04622A0E1C
+- expected_values:
     VOLKSWAGEN_SSB_R: 51
   response: 77A04622A0EFF
