--- a/tests/test_cases/2021/commands/7E0.0104.yaml
+++ b/tests/test_cases/2021/commands/7E0.0104.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     LOAD_PCT: 45.88235
   response: '7E803410475'
+- expected_values:
+    LOAD_PCT: 57.2549
+  response: '7E803410492'
