--- a/tests/test_cases/2021/commands/7E0.010C.yaml
+++ b/tests/test_cases/2021/commands/7E0.010C.yaml
@@ -9,3 +9,6 @@ test_cases:
 - expected_values:
     RPM: 982.5
   response: 7E804410C0F5A
+- expected_values:
+    RPM: 1441
+  response: 7E804410C1684
