--- a/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
@@ -1,5 +1,23 @@
 command_id: 7E0.7E8.22F430
 test_cases:
 - expected_values:
+    VOLKSWAGEN_WARM_UPS: 0
+  response: 7E80462F43000
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 1
+  response: 7E80462F43001
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 2
+  response: 7E80462F43002
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 3
+  response: 7E80462F43003
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 4
+  response: 7E80462F43004
+- expected_values:
+    VOLKSWAGEN_WARM_UPS: 5
+  response: 7E80462F43005
+- expected_values:
     VOLKSWAGEN_WARM_UPS: 255
   response: 7E80462F430FF
