--- a/tests/test_cases/2022/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A61|fc=1.yaml
@@ -42,3 +42,15 @@ test_cases:
   response: |-
     77A100B622A61000035
     77A210000003371AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000036
+    77A21210000348BAAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A61000036
+    77A212800003490AAAA
