--- a/tests/test_cases/2022/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.2210E0.yaml
@@ -12,3 +12,7 @@ test_cases:
     VOLKSWAGEN_ODO_2_V3: 14336
     VOLKSWAGEN_ODO_V3: 14336
   response: 7E8076210E000003800
+- expected_values:
+    VOLKSWAGEN_ODO_2_V3: 14753
+    VOLKSWAGEN_ODO_V3: 14753
+  response: 7E8076210E0000039A1
