--- a/tests/test_cases/2022/commands/7E0.7E8.221152.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.221152.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_2: 100
   response: 7E8056211520DE7
+- expected_values:
+    VOLKSWAGEN_EM_RPM_2: 100
+  response: 7E8056211520E1B
