--- a/tests/test_cases/2022/commands/7E1.22101A.yaml
+++ b/tests/test_cases/2022/commands/7E1.22101A.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_2: 14336
   response: 7E90762101A00380000
 - expected_values:
+    VOLKSWAGEN_ODO_TCM_2: 14753
+  response: 7E90762101AA1390000
+- expected_values:
     VOLKSWAGEN_ODO_TCM_2: 14262
   response: 7E90762101AB6370000
 - expected_values:
