Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
@@ -7,5 +7,8 @@ test_cases:
     VOLKSWAGEN_AIR_POLUTION: 0.1
   response: 7B0046226ED01
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 0.2
+  response: 7B0046226ED02
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: -0.1
   response: 7B0046226EDFF
