--- a/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22F430.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_WARM_UPS: 5
   response: 7E80462F43005
 - expected_values:
+    VOLKSWAGEN_WARM_UPS: 6
+  response: 7E80462F43006
+- expected_values:
     VOLKSWAGEN_WARM_UPS: 255
   response: 7E80462F430FF
