--- a/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 6.5
-  response: '77E0462101471'
+    VOLKSWAGEN_AAT: 4.5
+  response: 77E046210146D
 - expected_values:
     VOLKSWAGEN_AAT: 38
   response: 77E04621014B0
