--- a/tests/test_cases/2021/commands/710.77A.222A61|fc=1.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A61|fc=1.yaml
@@ -53,4 +53,10 @@ test_cases:
     VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
   response: |-
     77A100B622A610000B9
-    77A21D70000AFE0AAAA
+    77A21DD0000AFF0AAAA
+- expected_values:
+    VOLKSWAGEN_SSB_TOTAL_CHARGE: 100
+    VOLKSWAGEN_SSB_TOTAL_DISCHARGE: 100
+  response: |-
+    77A100B622A610000B9
+    77A21E70000B000AAAA
