--- a/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.2226ED|fc=1.yaml
@@ -19,5 +19,8 @@ test_cases:
     VOLKSWAGEN_AIR_POLUTION: 0.5
   response: 7B0046226ED05
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 1.4
+  response: 7B0046226ED0E
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: -0.1
   response: 7B0046226EDFF
