--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -14,6 +14,8 @@ supported_commands_by_ecu:
   "714":
   - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
   "746":
+  - 746.7B0.222606|fc=1:VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
+  - 746.7B0.222613|fc=1:VOLKSWAGEN_HVAC_INTERIOR_T
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
   "767":
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
@@ -117,7 +119,10 @@ unsupported_commands_by_ecu:
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
   "710":
-  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP
+  - 710.77A.222A53|fc=1:VOLKSWAGEN_DCDC_I,VOLKSWAGEN_DCDC_I_RSV,VOLKSWAGEN_DCDC_V_LOW
+  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
+  - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_EST_INT
+  - 710.77A.222AB5|fc=1:VOLKSWAGEN_RANGE_EST_CAN
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
@@ -141,6 +146,8 @@ unsupported_commands_by_ecu:
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
+  - 714.77E.221870|fc=1:VOLKSWAGEN_DASH_DRIVE_MODE
+  - 714.77E.2219D2|fc=1:VOLKSWAGEN_DASH_NORMAL_KM,VOLKSWAGEN_DASH_RANGE_KM
   - 714.77E.2222E0:VOLKSWAGEN_RANGE_DSP
   "715":
   - 715.222353:VOLKSWAGEN_CRASH_FRONT,VOLKSWAGEN_CRSH_FRONT
@@ -148,10 +155,40 @@ unsupported_commands_by_ecu:
   - 715.222355:VOLKSWAGEN_CRASH_CNT_PSNGR,VOLKSWAGEN_CRASH_PASS
   - 715.222356:VOLKSWAGEN_CRASH_CNT_REAR,VOLKSWAGEN_CRASH_REAR
   - 715.222357:VOLKSWAGEN_CRASH_CNT_ROLL,VOLKSWAGEN_ROLLOVER
+  "71E":
+  - 71E.788.22F105|fc=1,din=03:VOLKSWAGEN_DIFF_CLUTCH_T,VOLKSWAGEN_DIFF_MOTOR_T,VOLKSWAGEN_DIFF_OIL_T
+  "742":
+  - 742.7AC.222609|fc=1:VOLKSWAGEN_PTC_OUTSIDE_T
+  - 742.7AC.2227D6|fc=1:VOLKSWAGEN_PTC_PUMP_PWR,VOLKSWAGEN_PTC_PUMP_RPM
+  - 742.7AC.22475F|fc=1:VOLKSWAGEN_PTC_HTR_FLUID_T1,VOLKSWAGEN_PTC_HTR_FLUID_T2,VOLKSWAGEN_PTC_HTR_I
   "744":
+  - 744.7AE.221507|fc=1,din=03:VOLKSWAGEN_CHRGR_RAIL1_E,VOLKSWAGEN_CHRGR_RAIL2_E,VOLKSWAGEN_CHRGR_RAIL3_E
+  - 744.7AE.221529|fc=1,din=03:VOLKSWAGEN_CHRGR_PRX_V_CONN_B
+  - 744.7AE.221553|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_I
+  - 744.7AE.221554|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_V
+  - 744.7AE.221557|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_LO_I
+  - 744.7AE.221558|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_LO_V
+  - 744.7AE.221559|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_V
+  - 744.7AE.22155A|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_I
+  - 744.7AE.2215D5|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_MAX
+  - 744.7AE.2215D6|fc=1,din=03:VOLKSWAGEN_CHRGR_EFFICIENCY
+  - 744.7AE.2215E1|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_LOSS
+  - 744.7AE.2215E2|fc=1,din=03:VOLKSWAGEN_CHRGR_COOLANT_T
+  - 744.7AE.2215EE|fc=1,din=03:VOLKSWAGEN_CHRGR_DUR_TOTAL
+  - 744.7AE.2215EF|fc=1,din=03:VOLKSWAGEN_CHRGR_E_TOTAL
+  - 744.7AE.2215F7|fc=1,din=03:VOLKSWAGEN_CHRGR_3V_SUPPLY
+  - 744.7AE.221DA7|fc=1,din=03:VOLKSWAGEN_CHRGR_V_OUT
+  - 744.7AE.221DD0|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_DISP
+  - 744.7AE.221DD3|fc=1,din=03:VOLKSWAGEN_CHRGR_CHG_PWR_MAX
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
+  - 744.7AE.22F45B|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_2
   "746":
-  - 746.2227C4|fc=1:VOLKSWAGEN_WNDSHLD_TEMP
+  - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
+  - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
+  - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_T
+  - 746.7B0.222612|fc=1:VOLKSWAGEN_HVAC_EVAP_T
+  - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
@@ -174,6 +211,10 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
+  - 7E0.7E8.2229D4:VOLKSWAGEN_ENG_TRQ_REQ_1
+  - 7E0.7E8.22395E:VOLKSWAGEN_ENG_BRAKE_PUMP
+  - 7E0.7E8.223DF8:VOLKSWAGEN_ENG_MOTOR_RPM
+  - 7E0.7E8.224380:VOLKSWAGEN_ENG_TRQ_REQ_2
   "7E1":
   - 7E1.220302:VOLKSWAGEN_DRIVE_TIME
   - 7E1.220303:VOLKSWAGEN_DRIVE_TIME_ECO
@@ -189,8 +230,69 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
-  - 7E5.7ED.22028C:VOLKSWAGEN_HVBAT_SOC
+  - 7E5.221802|din=03:VOLKSWAGEN_BMS_I
+  - 7E5.22180C|din=03:VOLKSWAGEN_BMS_BMCE_T1
+  - 7E5.22180D|din=03:VOLKSWAGEN_BMS_BMCE_T2
+  - 7E5.22180E|din=03:VOLKSWAGEN_BMS_BMCE_T3
+  - 7E5.22180F|din=03:VOLKSWAGEN_BMS_SHUNT_T
+  - 7E5.221810|din=03:VOLKSWAGEN_BMS_BMCE_T_CAN
+  - 7E5.22181C|din=03:VOLKSWAGEN_BMS_COOL_IN_T
+  - 7E5.22181D|din=03:VOLKSWAGEN_BMS_COOL_OUT_T
+  - 7E5.221821|din=03:VOLKSWAGEN_HVBAT_MOD1_T1,VOLKSWAGEN_HVBAT_MOD1_T2,VOLKSWAGEN_HVBAT_MOD1_T3
+  - 7E5.221822|din=03:VOLKSWAGEN_HVBAT_MOD2_T1,VOLKSWAGEN_HVBAT_MOD2_T2,VOLKSWAGEN_HVBAT_MOD2_T3
+  - 7E5.221823|din=03:VOLKSWAGEN_HVBAT_MOD3_T1,VOLKSWAGEN_HVBAT_MOD3_T2,VOLKSWAGEN_HVBAT_MOD3_T3
+  - 7E5.221824|din=03:VOLKSWAGEN_HVBAT_MOD4_T1,VOLKSWAGEN_HVBAT_MOD4_T2,VOLKSWAGEN_HVBAT_MOD4_T3
+  - 7E5.221825|din=03:VOLKSWAGEN_HVBAT_MOD5_T1,VOLKSWAGEN_HVBAT_MOD5_T2,VOLKSWAGEN_HVBAT_MOD5_T3
+  - 7E5.221826|din=03:VOLKSWAGEN_HVBAT_MOD6_T1,VOLKSWAGEN_HVBAT_MOD6_T2,VOLKSWAGEN_HVBAT_MOD6_T3
+  - 7E5.221827|din=03:VOLKSWAGEN_HVBAT_MOD7_T1,VOLKSWAGEN_HVBAT_MOD7_T2,VOLKSWAGEN_HVBAT_MOD7_T3
+  - 7E5.221828|din=03:VOLKSWAGEN_HVBAT_MOD8_T1,VOLKSWAGEN_HVBAT_MOD8_T2,VOLKSWAGEN_HVBAT_MOD8_T3
+  - 7E5.221829|din=03:VOLKSWAGEN_HVBAT_MOD9_T1,VOLKSWAGEN_HVBAT_MOD9_T2,VOLKSWAGEN_HVBAT_MOD9_T3
+  - 7E5.22182A|din=03:VOLKSWAGEN_HVBAT_MOD10_T1,VOLKSWAGEN_HVBAT_MOD10_T2,VOLKSWAGEN_HVBAT_MOD10_T3
+  - 7E5.22182B|din=03:VOLKSWAGEN_HVBAT_MOD11_T1,VOLKSWAGEN_HVBAT_MOD11_T2,VOLKSWAGEN_HVBAT_MOD11_T3
+  - 7E5.22182C|din=03:VOLKSWAGEN_HVBAT_MOD12_T1,VOLKSWAGEN_HVBAT_MOD12_T2,VOLKSWAGEN_HVBAT_MOD12_T3
+  - 7E5.22182D|din=03:VOLKSWAGEN_HVBAT_MOD13_T1,VOLKSWAGEN_HVBAT_MOD13_T2,VOLKSWAGEN_HVBAT_MOD13_T3
+  - 7E5.22182E|din=03:VOLKSWAGEN_HVBAT_MOD14_T1,VOLKSWAGEN_HVBAT_MOD14_T2,VOLKSWAGEN_HVBAT_MOD14_T3
+  - 7E5.22182F|din=03:VOLKSWAGEN_HVBAT_MOD15_T1,VOLKSWAGEN_HVBAT_MOD15_T2,VOLKSWAGEN_HVBAT_MOD15_T3
+  - 7E5.221830|din=03:VOLKSWAGEN_HVBAT_MOD16_T1,VOLKSWAGEN_HVBAT_MOD16_T2,VOLKSWAGEN_HVBAT_MOD16_T3
+  - 7E5.221831|din=03:VOLKSWAGEN_HVBAT_MOD17_T1,VOLKSWAGEN_HVBAT_MOD17_T2,VOLKSWAGEN_HVBAT_MOD17_T3
+  - 7E5.221832|din=03:VOLKSWAGEN_HVBAT_MOD18_T1,VOLKSWAGEN_HVBAT_MOD18_T2,VOLKSWAGEN_HVBAT_MOD18_T3
+  - 7E5.221833|din=03:VOLKSWAGEN_HVBAT_MOD19_T1,VOLKSWAGEN_HVBAT_MOD19_T2,VOLKSWAGEN_HVBAT_MOD19_T3
+  - 7E5.221834|din=03:VOLKSWAGEN_HVBAT_MOD20_T1,VOLKSWAGEN_HVBAT_MOD20_T2,VOLKSWAGEN_HVBAT_MOD20_T3
+  - 7E5.221835|din=03:VOLKSWAGEN_HVBAT_MOD21_T1,VOLKSWAGEN_HVBAT_MOD21_T2,VOLKSWAGEN_HVBAT_MOD21_T3
+  - 7E5.221836|din=03:VOLKSWAGEN_HVBAT_MOD22_T1,VOLKSWAGEN_HVBAT_MOD22_T2,VOLKSWAGEN_HVBAT_MOD22_T3
+  - 7E5.221837|din=03:VOLKSWAGEN_HVBAT_MOD23_T1,VOLKSWAGEN_HVBAT_MOD23_T2,VOLKSWAGEN_HVBAT_MOD23_T3
+  - 7E5.221838|din=03:VOLKSWAGEN_HVBAT_MOD24_T1,VOLKSWAGEN_HVBAT_MOD24_T2,VOLKSWAGEN_HVBAT_MOD24_T3
+  - 7E5.221839|din=03:VOLKSWAGEN_HVBAT_MOD25_T1,VOLKSWAGEN_HVBAT_MOD25_T2,VOLKSWAGEN_HVBAT_MOD25_T3
+  - 7E5.22183A|din=03:VOLKSWAGEN_HVBAT_MOD26_T1,VOLKSWAGEN_HVBAT_MOD26_T2,VOLKSWAGEN_HVBAT_MOD26_T3
+  - 7E5.22183B|din=03:VOLKSWAGEN_HVBAT_MOD27_T1,VOLKSWAGEN_HVBAT_MOD27_T2,VOLKSWAGEN_HVBAT_MOD27_T3
+  - 7E5.22183C|din=03:VOLKSWAGEN_HVBAT_MOD28_T1,VOLKSWAGEN_HVBAT_MOD28_T2,VOLKSWAGEN_HVBAT_MOD28_T3
+  - 7E5.22183D|din=03:VOLKSWAGEN_HVBAT_MOD29_T1,VOLKSWAGEN_HVBAT_MOD29_T2,VOLKSWAGEN_HVBAT_MOD29_T3
+  - 7E5.22183E|din=03:VOLKSWAGEN_HVBAT_MOD30_T1,VOLKSWAGEN_HVBAT_MOD30_T2,VOLKSWAGEN_HVBAT_MOD30_T3
+  - 7E5.22183F|din=03:VOLKSWAGEN_HVBAT_MOD31_T1,VOLKSWAGEN_HVBAT_MOD31_T2,VOLKSWAGEN_HVBAT_MOD31_T3
+  - 7E5.22192B|din=03:VOLKSWAGEN_BMS_COOL_PUMP_PWR_SP
+  - 7E5.221E0A|din=03:VOLKSWAGEN_BMS_PWR_REDUCE_ACT
+  - 7E5.221E0E|din=03:VOLKSWAGEN_BMS_T_MAX,VOLKSWAGEN_BMS_T_MAX_CELL
+  - 7E5.221E0F|din=03:VOLKSWAGEN_BMS_T_MIN,VOLKSWAGEN_BMS_T_MIN_CELL
+  - 7E5.221E10|din=03:VOLKSWAGEN_BMS_T_AVG
+  - 7E5.221E1B|din=03:VOLKSWAGEN_BMS_I_CHG_LIM_DYN
+  - 7E5.221E1C|din=03:VOLKSWAGEN_BMS_I_DCHG_LIM_DYN
+  - 7E5.221E1D|din=03:VOLKSWAGEN_BMS_I_CHG_LIM_PRED
+  - 7E5.221E1E|din=03:VOLKSWAGEN_BMS_I_DCHG_LIM_PRED
+  - 7E5.221E2C|din=03:VOLKSWAGEN_BMS_CELL_SOC_MAX,VOLKSWAGEN_BMS_CELL_SOC_MAX_IDX
+  - 7E5.221E2D|din=03:VOLKSWAGEN_BMS_CELL_SOC_MIN,VOLKSWAGEN_BMS_CELL_SOC_MIN_IDX
+  - 7E5.221E33|din=03:VOLKSWAGEN_BMS_CELL_V_MAX,VOLKSWAGEN_BMS_CELL_V_MAX_IDX
+  - 7E5.221E34|din=03:VOLKSWAGEN_BMS_CELL_V_MIN,VOLKSWAGEN_BMS_CELL_V_MIN_IDX
+  - 7E5.225170|din=03:VOLKSWAGEN_BMS_V_DCHG_MIN
+  - 7E5.225171|din=03:VOLKSWAGEN_BMS_V_CHG_MAX
+  - 7E5.225172|din=03:VOLKSWAGEN_BMS_V_CHG_PRED_MIN
+  - 7E5.225173|din=03:VOLKSWAGEN_BMS_V_DCHG_PRED_MIN
+  - 7E5.225174|din=03:VOLKSWAGEN_BMS_V_CHG_DYN_MIN
+  - 7E5.225175|din=03:VOLKSWAGEN_BMS_V_DCHG_DYN_MIN
+  - 7E5.2280EC|din=03:VOLKSWAGEN_BMS_COOL_PUMP_CTL
+  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC
   - 7E5.7ED.221801:VOLKSWAGEN_HVBAT_VOLT
+  - 7E5.7ED.221840|din=03:VOLKSWAGEN_HVBAT_MOD32_T1,VOLKSWAGEN_HVBAT_MOD32_T2,VOLKSWAGEN_HVBAT_MOD32_T3
+  - 7E5.7ED.221841|din=03:VOLKSWAGEN_HVBAT_MOD33_T1,VOLKSWAGEN_HVBAT_MOD33_T2,VOLKSWAGEN_HVBAT_MOD33_T3
   - 7E5.7ED.221850:VOLKSWAGEN_HVBAT_MOD1_C1_SOC,VOLKSWAGEN_HVBAT_MOD1_C1_V,VOLKSWAGEN_HVBAT_MOD1_C2_SOC,VOLKSWAGEN_HVBAT_MOD1_C2_V,VOLKSWAGEN_HVBAT_MOD1_C3_SOC,VOLKSWAGEN_HVBAT_MOD1_C3_V,VOLKSWAGEN_HVBAT_MOD1_C4_SOC,VOLKSWAGEN_HVBAT_MOD1_C4_V,VOLKSWAGEN_HVBAT_MOD1_C5_SOC,VOLKSWAGEN_HVBAT_MOD1_C5_V,VOLKSWAGEN_HVBAT_MOD1_C6_SOC,VOLKSWAGEN_HVBAT_MOD1_C6_V,VOLKSWAGEN_HVBAT_MOD1_ID
   - 7E5.7ED.221851:VOLKSWAGEN_HVBAT_MOD2_C1_SOC,VOLKSWAGEN_HVBAT_MOD2_C1_V,VOLKSWAGEN_HVBAT_MOD2_C2_SOC,VOLKSWAGEN_HVBAT_MOD2_C2_V,VOLKSWAGEN_HVBAT_MOD2_C3_SOC,VOLKSWAGEN_HVBAT_MOD2_C3_V,VOLKSWAGEN_HVBAT_MOD2_C4_SOC,VOLKSWAGEN_HVBAT_MOD2_C4_V,VOLKSWAGEN_HVBAT_MOD2_C5_SOC,VOLKSWAGEN_HVBAT_MOD2_C5_V,VOLKSWAGEN_HVBAT_MOD2_C6_SOC,VOLKSWAGEN_HVBAT_MOD2_C6_V,VOLKSWAGEN_HVBAT_MOD2_ID
   - 7E5.7ED.221852:VOLKSWAGEN_HVBAT_MOD3_C1_SOC,VOLKSWAGEN_HVBAT_MOD3_C1_V,VOLKSWAGEN_HVBAT_MOD3_C2_SOC,VOLKSWAGEN_HVBAT_MOD3_C2_V,VOLKSWAGEN_HVBAT_MOD3_C3_SOC,VOLKSWAGEN_HVBAT_MOD3_C3_V,VOLKSWAGEN_HVBAT_MOD3_C4_SOC,VOLKSWAGEN_HVBAT_MOD3_C4_V,VOLKSWAGEN_HVBAT_MOD3_C5_SOC,VOLKSWAGEN_HVBAT_MOD3_C5_V,VOLKSWAGEN_HVBAT_MOD3_C6_SOC,VOLKSWAGEN_HVBAT_MOD3_C6_V,VOLKSWAGEN_HVBAT_MOD3_ID
@@ -223,10 +325,12 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.22186D:VOLKSWAGEN_HVBAT_MOD30_C1_SOC,VOLKSWAGEN_HVBAT_MOD30_C1_V,VOLKSWAGEN_HVBAT_MOD30_C2_SOC,VOLKSWAGEN_HVBAT_MOD30_C2_V,VOLKSWAGEN_HVBAT_MOD30_C3_SOC,VOLKSWAGEN_HVBAT_MOD30_C3_V,VOLKSWAGEN_HVBAT_MOD30_C4_SOC,VOLKSWAGEN_HVBAT_MOD30_C4_V,VOLKSWAGEN_HVBAT_MOD30_C5_SOC,VOLKSWAGEN_HVBAT_MOD30_C5_V,VOLKSWAGEN_HVBAT_MOD30_C6_SOC,VOLKSWAGEN_HVBAT_MOD30_C6_V,VOLKSWAGEN_HVBAT_MOD30_ID
   - 7E5.7ED.22186E:VOLKSWAGEN_HVBAT_MOD31_C1_SOC,VOLKSWAGEN_HVBAT_MOD31_C1_V,VOLKSWAGEN_HVBAT_MOD31_C2_SOC,VOLKSWAGEN_HVBAT_MOD31_C2_V,VOLKSWAGEN_HVBAT_MOD31_C3_SOC,VOLKSWAGEN_HVBAT_MOD31_C3_V,VOLKSWAGEN_HVBAT_MOD31_C4_SOC,VOLKSWAGEN_HVBAT_MOD31_C4_V,VOLKSWAGEN_HVBAT_MOD31_C5_SOC,VOLKSWAGEN_HVBAT_MOD31_C5_V,VOLKSWAGEN_HVBAT_MOD31_C6_SOC,VOLKSWAGEN_HVBAT_MOD31_C6_V,VOLKSWAGEN_HVBAT_MOD31_ID
   - 7E5.7ED.22186F:VOLKSWAGEN_HVBAT_MOD32_C1_SOC,VOLKSWAGEN_HVBAT_MOD32_C1_V,VOLKSWAGEN_HVBAT_MOD32_C2_SOC,VOLKSWAGEN_HVBAT_MOD32_C2_V,VOLKSWAGEN_HVBAT_MOD32_C3_SOC,VOLKSWAGEN_HVBAT_MOD32_C3_V,VOLKSWAGEN_HVBAT_MOD32_C4_SOC,VOLKSWAGEN_HVBAT_MOD32_C4_V,VOLKSWAGEN_HVBAT_MOD32_C5_SOC,VOLKSWAGEN_HVBAT_MOD32_C5_V,VOLKSWAGEN_HVBAT_MOD32_C6_SOC,VOLKSWAGEN_HVBAT_MOD32_C6_V,VOLKSWAGEN_HVBAT_MOD32_ID
+  - 7E5.7ED.221870|din=03:VOLKSWAGEN_HVBAT_MOD31_ID_V2,VOLKSWAGEN_HVBAT_MOD33_C1_SOC,VOLKSWAGEN_HVBAT_MOD33_C1_V,VOLKSWAGEN_HVBAT_MOD33_C2_SOC,VOLKSWAGEN_HVBAT_MOD33_C2_V,VOLKSWAGEN_HVBAT_MOD33_C3_SOC,VOLKSWAGEN_HVBAT_MOD33_C3_V,VOLKSWAGEN_HVBAT_MOD33_C4_SOC,VOLKSWAGEN_HVBAT_MOD33_C4_V,VOLKSWAGEN_HVBAT_MOD33_C5_SOC,VOLKSWAGEN_HVBAT_MOD33_C5_V,VOLKSWAGEN_HVBAT_MOD33_C6_SOC,VOLKSWAGEN_HVBAT_MOD33_C6_V
   - 7E5.7ED.221E32:VOLKSWAGEN_HVBAT_TOT_AH_CHRG,VOLKSWAGEN_HVBAT_TOT_AH_DCHRG,VOLKSWAGEN_HVBAT_TOT_KWH_CHRG,VOLKSWAGEN_HVBAT_TOT_KWH_DCHRG
-  - 7E5.7ED.221E3B:VOLKSWAGEN_HVBAT_VOLTS
+  - 7E5.7ED.221E3B:VOLKSWAGEN_BMS_CELL_V_SUM,VOLKSWAGEN_HVBAT_VOLTS
   - 7E5.7ED.221E3D:VOLKSWAGEN_HVBAT_CURRENT
   - 7E5.7ED.2251E0:VOLKSWAGEN_HVBAT_SOH
   - 7E5.7ED.225200:VOLKSWAGEN_LAUNCH
+  - 7E5.7ED.22F45B|din=03:VOLKSWAGEN_BMS_SOC_HIRES
   "FC00":
   - FC00.22028C:VOLKSWAGEN_SOC
