--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -101,7 +101,7 @@ unsupported_commands_by_ecu:
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
   "710":
-  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP
+  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
@@ -134,7 +134,7 @@ unsupported_commands_by_ecu:
   "744":
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
   "746":
-  - 746.2227C4|fc=1:VOLKSWAGEN_WNDSHLD_TEMP
+  - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   "767":
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
@@ -166,7 +166,7 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
-  - 7E5.7ED.22028C:VOLKSWAGEN_HVBAT_SOC
+  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC
   - 7E5.7ED.221801:VOLKSWAGEN_HVBAT_VOLT
   - 7E5.7ED.221850:VOLKSWAGEN_HVBAT_MOD1_C1_SOC,VOLKSWAGEN_HVBAT_MOD1_C1_V,VOLKSWAGEN_HVBAT_MOD1_C2_SOC,VOLKSWAGEN_HVBAT_MOD1_C2_V,VOLKSWAGEN_HVBAT_MOD1_C3_SOC,VOLKSWAGEN_HVBAT_MOD1_C3_V,VOLKSWAGEN_HVBAT_MOD1_C4_SOC,VOLKSWAGEN_HVBAT_MOD1_C4_V,VOLKSWAGEN_HVBAT_MOD1_C5_SOC,VOLKSWAGEN_HVBAT_MOD1_C5_V,VOLKSWAGEN_HVBAT_MOD1_C6_SOC,VOLKSWAGEN_HVBAT_MOD1_C6_V,VOLKSWAGEN_HVBAT_MOD1_ID
   - 7E5.7ED.221851:VOLKSWAGEN_HVBAT_MOD2_C1_SOC,VOLKSWAGEN_HVBAT_MOD2_C1_V,VOLKSWAGEN_HVBAT_MOD2_C2_SOC,VOLKSWAGEN_HVBAT_MOD2_C2_V,VOLKSWAGEN_HVBAT_MOD2_C3_SOC,VOLKSWAGEN_HVBAT_MOD2_C3_V,VOLKSWAGEN_HVBAT_MOD2_C4_SOC,VOLKSWAGEN_HVBAT_MOD2_C4_V,VOLKSWAGEN_HVBAT_MOD2_C5_SOC,VOLKSWAGEN_HVBAT_MOD2_C5_V,VOLKSWAGEN_HVBAT_MOD2_C6_SOC,VOLKSWAGEN_HVBAT_MOD2_C6_V,VOLKSWAGEN_HVBAT_MOD2_ID
@@ -201,7 +201,7 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.22186E:VOLKSWAGEN_HVBAT_MOD31_C1_SOC,VOLKSWAGEN_HVBAT_MOD31_C1_V,VOLKSWAGEN_HVBAT_MOD31_C2_SOC,VOLKSWAGEN_HVBAT_MOD31_C2_V,VOLKSWAGEN_HVBAT_MOD31_C3_SOC,VOLKSWAGEN_HVBAT_MOD31_C3_V,VOLKSWAGEN_HVBAT_MOD31_C4_SOC,VOLKSWAGEN_HVBAT_MOD31_C4_V,VOLKSWAGEN_HVBAT_MOD31_C5_SOC,VOLKSWAGEN_HVBAT_MOD31_C5_V,VOLKSWAGEN_HVBAT_MOD31_C6_SOC,VOLKSWAGEN_HVBAT_MOD31_C6_V,VOLKSWAGEN_HVBAT_MOD31_ID
   - 7E5.7ED.22186F:VOLKSWAGEN_HVBAT_MOD32_C1_SOC,VOLKSWAGEN_HVBAT_MOD32_C1_V,VOLKSWAGEN_HVBAT_MOD32_C2_SOC,VOLKSWAGEN_HVBAT_MOD32_C2_V,VOLKSWAGEN_HVBAT_MOD32_C3_SOC,VOLKSWAGEN_HVBAT_MOD32_C3_V,VOLKSWAGEN_HVBAT_MOD32_C4_SOC,VOLKSWAGEN_HVBAT_MOD32_C4_V,VOLKSWAGEN_HVBAT_MOD32_C5_SOC,VOLKSWAGEN_HVBAT_MOD32_C5_V,VOLKSWAGEN_HVBAT_MOD32_C6_SOC,VOLKSWAGEN_HVBAT_MOD32_C6_V,VOLKSWAGEN_HVBAT_MOD32_ID
   - 7E5.7ED.221E32:VOLKSWAGEN_HVBAT_TOT_AH_CHRG,VOLKSWAGEN_HVBAT_TOT_AH_DCHRG,VOLKSWAGEN_HVBAT_TOT_KWH_CHRG,VOLKSWAGEN_HVBAT_TOT_KWH_DCHRG
-  - 7E5.7ED.221E3B:VOLKSWAGEN_HVBAT_VOLTS
+  - 7E5.7ED.221E3B:VOLKSWAGEN_BMS_CELL_V_SUM,VOLKSWAGEN_HVBAT_VOLTS
   - 7E5.7ED.221E3D:VOLKSWAGEN_HVBAT_CURRENT
   - 7E5.7ED.2251E0:VOLKSWAGEN_HVBAT_SOH
   - 7E5.7ED.225200:VOLKSWAGEN_LAUNCH
