--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -64,7 +64,7 @@ supported_commands_by_ecu:
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_V4
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
@@ -73,7 +73,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
   - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
   - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
-  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
   - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
@@ -115,7 +115,7 @@ unsupported_commands_by_ecu:
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
   - 713.77D.222B1E:VOLKSWAGEN_TIRE_RR_SPD_V3
-  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE
+  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE_V2
   "714":
   - 714.22202F:VOLKSWAGEN_EOT
   - 714.222203:VOLKSWAGEN_ODO,VOLKSWAGEN_ODO_DASH
@@ -206,4 +206,4 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.2251E0:VOLKSWAGEN_HVBAT_SOH
   - 7E5.7ED.225200:VOLKSWAGEN_LAUNCH
   "FC00":
-  - FC00.22028C:VOLKSWAGEN_SOC
+  - FC00.22028C:VOLKSWAGEN_SOC_V2
