--- a/tests/test_cases/2022/commands/7E0.7E8.22F40D.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.22F40D.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.7E8.22F40D
 test_cases:
 - expected_values:
-    VOLKSWAGEN_VSS: 0
+    VOLKSWAGEN_VSS_V2: 0
   response: 7E80462F40D00
 - expected_values:
-    VOLKSWAGEN_VSS: 101
+    VOLKSWAGEN_VSS_V2: 101
   response: 7E80462F40D65
