--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -87,6 +87,7 @@ supported_commands_by_ecu:
   - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0133:BARO
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0142:VPWR
   - 7E0.0145:TP_R
   - 7E0.0146:AAT
@@ -203,7 +204,7 @@ unsupported_commands_by_ecu:
   - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
   - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
   - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_AAT
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_T
   - 746.7B0.222612|fc=1:VOLKSWAGEN_HVAC_EVAP_T
   - 746.7B0.22263D|fc=1:VOLKSWAGEN_REAR_DEFL_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
@@ -245,6 +246,8 @@ unsupported_commands_by_ecu:
   - 7E1.222B1C:VOLKSWAGEN_TIRE_FR_SPD
   - 7E1.222B1D:VOLKSWAGEN_TIRE_RL_SPD
   - 7E1.222B1E:VOLKSWAGEN_TIRE_RR_SPD
+  - 7E1.7E9.0104
+  - 7E1.7E9.0105
   - 7E1.7E9.010D
   - 7E1.7E9.220805:VOLKSWAGEN_BRAKE_LIGHT_ON,VOLKSWAGEN_BRAKE_LIGHT_ON_VALID,VOLKSWAGEN_BRAKE_PRESSED,VOLKSWAGEN_BRAKE_PRESSED_VALID
   - 7E1.7E9.221002:VOLKSWAGEN_TIRE_FL_SPD_V2
@@ -373,9 +376,9 @@ unsupported_commands_by_ecu:
   - FC00.FE0076.2243B8|ta=76,c=17:VOLKSWAGEN_DCDC_T_COOL
   - FC00.FE0076.224539|ta=76,c=17:VOLKSWAGEN_ACCEL
   - FC00.FE0076.224675|ta=76,c=17:VOLKSWAGEN_HVBAT_V_TRAC
-  - FC00.FE0076.22F817|ta=76,c=17:VOLKSWAGEN_HVBAT_ODO
+  - FC00.FE0076.22F817
   - FC00.FE007B.22028C|ta=7B,c=17:VOLKSWAGEN_SOC_DISP
-  - FC00.FE007B.2202BD|ta=7B,c=17:VOLKSWAGEN_BMS_ODO
+  - FC00.FE007B.2202BD
   - FC00.FE007B.221620|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_I
   - FC00.FE007B.221621|ta=7B,c=17:VOLKSWAGEN_HVBAT_PTC_V
   - FC00.FE007B.221622|ta=7B,c=17:VOLKSWAGEN_HVBAT_ECU_T
@@ -389,7 +392,7 @@ unsupported_commands_by_ecu:
   - FC00.FE007B.221E1C|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_LIM_DSCH
   - FC00.FE007B.221E2C|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_SOC_MAX,VOLKSWAGEN_HVBAT_CELL_SOC_MAX_ID
   - FC00.FE007B.221E2D|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_SOC_MIN,VOLKSWAGEN_HVBAT_CELL_SOC_MIN_ID
-  - FC00.FE007B.221E32|ta=7B,c=17:VOLKSWAGEN_HVBAT_CHRG_TOT_AH,VOLKSWAGEN_HVBAT_CHRG_TOT_KWH,VOLKSWAGEN_HVBAT_DSCH_TOT_AH,VOLKSWAGEN_HVBAT_DSCH_TOT_KWH
+  - FC00.FE007B.221E32
   - FC00.FE007B.221E33|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_MAX,VOLKSWAGEN_HVBAT_CELL_V_MAX_ID
   - FC00.FE007B.221E34|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_MIN,VOLKSWAGEN_HVBAT_CELL_V_MIN_ID
   - FC00.FE007B.221E36|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_BEFORE
@@ -397,7 +400,7 @@ unsupported_commands_by_ecu:
   - FC00.FE007B.221E39|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_CHG
   - FC00.FE007B.221E3B|ta=7B,c=17:VOLKSWAGEN_DC_BATTERY_V
   - FC00.FE007B.221E3C|ta=7B,c=17:VOLKSWAGEN_HVBAT_V_CELLS_SUM
-  - FC00.FE007B.221E3D|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_DC
+  - FC00.FE007B.221E3D
   - FC00.FE007B.221E3E|ta=7B,c=17:VOLKSWAGEN_HVBAT_I_DC_2
   - FC00.FE007B.221E40|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_001
   - FC00.FE007B.221E41|ta=7B,c=17:VOLKSWAGEN_HVBAT_CELL_V_002
