--- a/tests/test_cases/2021/commands/7E0.0105.yaml
+++ b/tests/test_cases/2021/commands/7E0.0105.yaml
@@ -1,8 +1,23 @@
 command_id: 7E0.0105
 test_cases:
 - expected_values:
+    ECT: 17
+  response: '7E803410539'
+- expected_values:
+    ECT: 25
+  response: '7E803410541'
+- expected_values:
+    ECT: 36
+  response: 7E80341054C
+- expected_values:
     ECT: 39
   response: 7E80341054F
+- expected_values:
+    ECT: 44
+  response: '7E803410554'
+- expected_values:
+    ECT: 48
+  response: '7E803410558'
 - expected_values:
     ECT: 68
   response: 7E80341056C
