--- a/tests/test_cases/2021/commands/7E0.0111.yaml
+++ b/tests/test_cases/2021/commands/7E0.0111.yaml
@@ -10,5 +10,20 @@ test_cases:
     TP: 26.27451
   response: '7E803411143'
 - expected_values:
+    TP: 27.05882
+  response: '7E803411145'
+- expected_values:
     TP: 32.54902
   response: '7E803411153'
+- expected_values:
+    TP: 52.54902
+  response: '7E803411186'
+- expected_values:
+    TP: 53.33333
+  response: '7E803411188'
+- expected_values:
+    TP: 68.23529
+  response: 7E8034111AE
+- expected_values:
+    TP: 82.7451
+  response: 7E8034111D3
