--- a/tests/test_cases/2021/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.22260A|fc=1.yaml
@@ -1,8 +1,17 @@
 command_id: 746.7B0.22260A|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_CABIN: -45.5
+  response: 7B00462260A09
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -45
+  response: 7B00462260A0A
+- expected_values:
     VOLKSWAGEN_AAT_CABIN: -44.5
   response: 7B00462260A0B
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: -44
+  response: 7B00462260A0C
 - expected_values:
     VOLKSWAGEN_AAT_CABIN: -38.5
   response: 7B00462260A17
