--- a/tests/test_cases/2022/command_support.yaml
+++ b/tests/test_cases/2022/command_support.yaml
@@ -102,7 +102,11 @@ unsupported_commands_by_ecu:
   - 70B.2218A2|fc=1:VOLKSWAGEN_TID_3,VOLKSWAGEN_TPOS_3,VOLKSWAGEN_TPS_3,VOLKSWAGEN_TPW_3,VOLKSWAGEN_TP_3,VOLKSWAGEN_TP_RL,VOLKSWAGEN_TT_3
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
   "710":
+  - 710.77A.2215D1|fc=1:VOLKSWAGEN_HV_EM_HVBAT_ENERGY_INFORMATION,VOLKSWAGEN_HV_EM_NV_PWR_LIMITATION,VOLKSWAGEN_HV_EM_PWR_LIMITATION,VOLKSWAGEN_NV_ENERGY_REQUIREMENT
+  - 710.77A.222A53|fc=1:VOLKSWAGEN_DCDC_I,VOLKSWAGEN_DCDC_I_RSV,VOLKSWAGEN_DCDC_V_LOW
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
+  - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_RESERVE_EST
+  - 710.77A.222AB5|fc=1:VOLKSWAGEN_RANGE_EST_CAN
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
@@ -125,6 +129,8 @@ unsupported_commands_by_ecu:
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
+  - 714.77E.221870|fc=1:VOLKSWAGEN_DASH_DRIVE_MODE
+  - 714.77E.2219D2|fc=1:VOLKSWAGEN_DASH_NORMAL_KM,VOLKSWAGEN_DASH_RANGE_KM
   - 714.77E.2222E0:VOLKSWAGEN_RANGE_DSP
   "715":
   - 715.222353:VOLKSWAGEN_CRASH_FRONT,VOLKSWAGEN_CRSH_FRONT
