Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/746.7B0.22261F|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.22261F|fc=1.yaml
@@ -16,6 +16,12 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 93
   response: 7B00562261F005D
 - expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 95
+  response: 7B00562261F005F
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 96
+  response: 7B00562261F0060
+- expected_values:
     VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS: 97
   response: 7B00562261F0061
 - expected_values:
