--- a/tests/test_cases/2022/commands/7E1.223887.yaml
+++ b/tests/test_cases/2022/commands/7E1.223887.yaml
@@ -4,8 +4,8 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_2_HD: 14080
   response: '7E90762388700260200'
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_2_HD: 14592.8
-  response: 7E907623887083A0200
+    VOLKSWAGEN_ODO_TCM_2_HD: 15334.9
+  response: '7E90762388705570200'
 - expected_values:
     VOLKSWAGEN_ODO_TCM_2_HD: 14062.5
   response: '7E90762388751250200'
