--- a/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 4
-  response: 77E046210146C
+    VOLKSWAGEN_AAT: 2
+  response: '77E0462101468'
 - expected_values:
     VOLKSWAGEN_AAT: 38
   response: 77E04621014B0
