--- a/tests/test_cases/2022/commands/710.77A.222A00|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A00|fc=1.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_SSB_VT: 10.6
   response: 77A04622A0000
 - expected_values:
+    VOLKSWAGEN_SSB_VT: 14.2
+  response: 77A04622A0024
+- expected_values:
     VOLKSWAGEN_SSB_VT: 14.3
   response: 77A04622A0025
 - expected_values:
