--- a/tests/test_cases/2022/commands/7E0.7E8.221151.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.221151.yaml
@@ -4,5 +4,5 @@ test_cases:
     VOLKSWAGEN_EM_RPM_1: 919
   response: 7E805621151072E
 - expected_values:
-    VOLKSWAGEN_EM_RPM_1: 960.5
-  response: '7E8056211510781'
+    VOLKSWAGEN_EM_RPM_1: 1004
+  response: 7E80562115107D8
