--- a/tests/test_cases/2022/commands/7E1.223841.yaml
+++ b/tests/test_cases/2022/commands/7E1.223841.yaml
@@ -4,8 +4,8 @@ test_cases:
     VOLKSWAGEN_ODO_TCM_1: 143104
   response: 7E907623841002F0200
 - expected_values:
-    VOLKSWAGEN_ODO_TCM_1: 146438
-  response: 7E907623841063C0200
+    VOLKSWAGEN_ODO_TCM_1: 153863
+  response: '7E90762384107590200'
 - expected_values:
     VOLKSWAGEN_ODO_TCM_1: 141092
   response: '7E90762384124270200'
