--- a/tests/test_cases/2022/commands/7E1.7E9.222104.yaml
+++ b/tests/test_cases/2022/commands/7E1.7E9.222104.yaml
@@ -4,5 +4,5 @@ test_cases:
     VOLKSWAGEN_ATF_T: -26
   response: 7E9056221040E00
 - expected_values:
-    VOLKSWAGEN_ATF_T: 50
-  response: 7E9056221045A00
+    VOLKSWAGEN_ATF_T: 62
+  response: '7E9056221046600'
