Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/746.7B0.222622|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222622|fc=1.yaml
@@ -1,8 +1,11 @@
 command_id: 746.7B0.222622|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT: 39.5
-  response: 7B006622622006D4F
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT: 28
+  response: 7B006622622005538
+- expected_values:
+    VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT: 100
+  response: 7B00662262200EAC8
 - expected_values:
     VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT: 100
   response: 7B00662262200EBC8
