--- a/tests/test_cases/2021/commands/746.7B0.222626|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222626|fc=1.yaml
@@ -1,8 +1,11 @@
 command_id: 746.7B0.222626|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT: 42.5
-  response: 7B006622626007155
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT: 26
+  response: 7B006622626005034
+- expected_values:
+    VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT: 100
+  response: 7B00662262600E7C8
 - expected_values:
     VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT: 100
   response: 7B00662262600E8C8
