--- a/tests/test_cases/2021/commands/7E0.0134.yaml
+++ b/tests/test_cases/2021/commands/7E0.0134.yaml
@@ -9,10 +9,14 @@ test_cases:
     O2S11_CURRENT: 1.00391
   response: 7E80641340B028101
 - expected_values:
+    LAMBDA11_CURRENT: 0.125
+    O2S11_CURRENT: 1.90625
+  response: 7E8064134100081E8
+- expected_values:
     LAMBDA11_CURRENT: 0.99997
     O2S11_CURRENT: -0.00391
   response: 7E80641347FFF7FFF
 - expected_values:
     LAMBDA11_CURRENT: 0.99997
-    O2S11_CURRENT: 4.05859
-  response: 7E80641347FFF840F
+    O2S11_CURRENT: 4.01562
+  response: 7E80641347FFF8404
