--- a/tests/test_cases/2021/commands/7E0.7E8.2211BE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2211BE.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2211BE
 test_cases:
 - expected_values:
+    VOLKSWAGEN_EOT_V2: 2792
+  response: 7E8056211BE0AE8
+- expected_values:
     VOLKSWAGEN_EOT_V2: 2832
   response: 7E8056211BE0B10
 - expected_values:
