Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.0111.yaml
+++ b/tests/test_cases/2021/commands/7E0.0111.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.0111
 test_cases:
 - expected_values:
-    TP: 24.31373
-  response: 7E80341113E
+    TP: 14.11765
+  response: '7E803411124'
 - expected_values:
     TP: 83.92157
   response: 7E8034111D6
