Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/710.77A.222A10|fc=1.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A10|fc=1.yaml
@@ -1,23 +1,23 @@
-command_id: 710.77A.222A10
+command_id: 710.77A.222A10|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 9
+    VOLKSWAGEN_BAT_V_AT_REST: 9
   response: 77A04622A1000
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 15.56471
+    VOLKSWAGEN_BAT_V_AT_REST: 15.56471
   response: 77A04622A101F
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 15.77647
+    VOLKSWAGEN_BAT_V_AT_REST: 15.77647
   response: 77A04622A1020
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 15.98824
+    VOLKSWAGEN_BAT_V_AT_REST: 15.98824
   response: 77A04622A1021
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 16.2
+    VOLKSWAGEN_BAT_V_AT_REST: 16.2
   response: 77A04622A1022
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 16.41176
+    VOLKSWAGEN_BAT_V_AT_REST: 16.41176
   response: 77A04622A1023
 - expected_values:
-    VOLKSWAGEN_SSB_V_REST: 21.70588
+    VOLKSWAGEN_BAT_V_AT_REST: 21.70588
   response: 77A04622A103C
