--- a/tests/test_cases/2022/commands/710.77A.222A09|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A09|fc=1.yaml
@@ -1,14 +1,18 @@
-command_id: 710.77A.222A09
+command_id: 710.77A.222A09|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_BAT_I: -3000
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A0900000000
 - expected_values:
+    VOLKSWAGEN_BAT_I: -2999.999
     VOLKSWAGEN_SSB_C: 0.511
   response: 77A07622A09000001FF
 - expected_values:
+    VOLKSWAGEN_BAT_I: 13777.17
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A09FFFFD298
 - expected_values:
+    VOLKSWAGEN_BAT_I: 13777.211
     VOLKSWAGEN_SSB_C: 0
   response: 77A07622A09FFFFFB79
