--- a/tests/test_cases/2022/commands/7E0.7E8.2210E0.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.2210E0.yaml
@@ -1,18 +1,18 @@
 command_id: 7E0.7E8.2210E0
 test_cases:
 - expected_values:
-    VOLKSWAGEN_ODO_2_V4: 14262
-    VOLKSWAGEN_ODO_V4: 14262
+    VOLKSWAGEN_ODO_10E0: 14262
+    VOLKSWAGEN_ODO_V3: 14262
   response: 7E8076210E0000037B6
 - expected_values:
-    VOLKSWAGEN_ODO_2_V4: 14335
-    VOLKSWAGEN_ODO_V4: 14335
+    VOLKSWAGEN_ODO_10E0: 14335
+    VOLKSWAGEN_ODO_V3: 14335
   response: 7E8076210E0000037FF
 - expected_values:
-    VOLKSWAGEN_ODO_2_V4: 14336
-    VOLKSWAGEN_ODO_V4: 14336
+    VOLKSWAGEN_ODO_10E0: 14336
+    VOLKSWAGEN_ODO_V3: 14336
   response: 7E8076210E000003800
 - expected_values:
-    VOLKSWAGEN_ODO_2_V4: 15540
-    VOLKSWAGEN_ODO_V4: 15540
+    VOLKSWAGEN_ODO_10E0: 15540
+    VOLKSWAGEN_ODO_V3: 15540
   response: 7E8076210E000003CB4
