--- a/tests/test_cases/2022/commands/7E0.7E8.221151.yaml
+++ b/tests/test_cases/2022/commands/7E0.7E8.221151.yaml
@@ -2,7 +2,9 @@ command_id: 7E0.7E8.221151
 test_cases:
 - expected_values:
     VOLKSWAGEN_EM_RPM_1: 919
+    VOLKSWAGEN_MISFIRE_3: 1838
   response: 7E805621151072E
 - expected_values:
     VOLKSWAGEN_EM_RPM_1: 1004
+    VOLKSWAGEN_MISFIRE_3: 2008
   response: 7E80562115107D8
