--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -3,31 +3,35 @@ supported_commands_by_ecu:
   "710":
   - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
   - 710.77A.222A00|fc=1:VOLKSWAGEN_SSB_VT
-  - 710.77A.222A07:VOLKSWAGEN_SSB_V
-  - 710.77A.222A09:VOLKSWAGEN_SSB_C
-  - 710.77A.222A0B:VOLKSWAGEN_SSB_T
-  - 710.77A.222A0C:VOLKSWAGEN_SSB_SOC
-  - 710.77A.222A0E:VOLKSWAGEN_SSB_R
-  - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
-  - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
+  - 710.77A.222A07|fc=1:VOLKSWAGEN_BAT_V_2A07,VOLKSWAGEN_SSB_V
+  - 710.77A.222A09|fc=1:VOLKSWAGEN_BAT_I,VOLKSWAGEN_SSB_C
+  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T
+  - 710.77A.222A0C|fc=1:VOLKSWAGEN_BAT_CHG_LVL,VOLKSWAGEN_SSB_SOC
+  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R
+  - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
+  - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
   "714":
-  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
+  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT,VOLKSWAGEN_DASH_AMBIENT_AIR_T
   "746":
-  - 746.7B0.222603|fc=1:VOLKSWAGEN_A_C_CMPR_SPEED
-  - 746.7B0.222605|fc=1:VOLKSWAGEN_REFRIG_P
-  - 746.7B0.222606|fc=1:VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
+  - 746.7B0.222603|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_SPD
+  - 746.7B0.222604|fc=1:VOLKSWAGEN_CLIMATE_A_C_COMP_LOAD,VOLKSWAGEN_HVAC_AC_LOAD
+  - 746.7B0.222605|fc=1:VOLKSWAGEN_CLIMATE_REFRIG_P
+  - 746.7B0.222606|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_ACT_DUTY,VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
+  - 746.7B0.222607|fc=1:VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY,VOLKSWAGEN_HVAC_FAN_CMD
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_AAT_V2,VOLKSWAGEN_HVAC_OUTSIDE_T
   - 746.7B0.22260A|fc=1:VOLKSWAGEN_AAT_CABIN
-  - 746.7B0.22260C|fc=1:VOLKSWAGEN_FRONT_LEFT_DEFL_T
-  - 746.7B0.22260D|fc=1:VOLKSWAGEN_FRONT_RIGHT_DEFL_T
-  - 746.7B0.222613|fc=1:VOLKSWAGEN_HVAC_IAT
+  - 746.7B0.22260C|fc=1:VOLKSWAGEN_CLIMATE_FR_L_DEFL_T
+  - 746.7B0.22260D|fc=1:VOLKSWAGEN_CLIMATE_FR_R_DEFL_T
+  - 746.7B0.222612|fc=1:VOLKSWAGEN_CLIMATE_T_AFTER_EVAP,VOLKSWAGEN_HVAC_EVAP_T
+  - 746.7B0.222613|fc=1:VOLKSWAGEN_CABIN_T,VOLKSWAGEN_HVAC_IAT
   - 746.7B0.22261E|fc=1:VOLKSWAGEN_RECIRC_FLAP_ACT_PCT,VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS
   - 746.7B0.22261F|fc=1:VOLKSWAGEN_RECIRC_FLAP_CMD_STEPS
   - 746.7B0.222620|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH
   - 746.7B0.222621|fc=1:VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC
-  - 746.7B0.222622|fc=1:VOLKSWAGEN_FRONT_LEFT_T_FLAP_ACT
-  - 746.7B0.222626|fc=1:VOLKSWAGEN_FRONT_RIGHT_T_FLAP_ACT
-  - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
+  - 746.7B0.222622|fc=1:VOLKSWAGEN_CLIMATE_FR_L_T_FLP_ACT_VALUE
+  - 746.7B0.222626|fc=1:VOLKSWAGEN_CLIMATE_FR_R_T_FLP_ACT_VALUE
+  - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION,VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL
   "767":
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
@@ -99,9 +103,9 @@ supported_commands_by_ecu:
   - 7E0.0169:EGR_A_ACT,EGR_A_ACT_SUP,EGR_A_CMD,EGR_A_CMD_SUP,EGR_A_ERR,EGR_A_ERR_SUP,EGR_B_ACT,EGR_B_ACT_SUP,EGR_B_CMD,EGR_B_CMD_SUP,EGR_B_ERR,EGR_B_ERR_SUP
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
-  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
-  - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
-  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
+  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRE_3
+  - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1,VOLKSWAGEN_MISFIRE_2
+  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_EOT_V3
   - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
@@ -118,12 +122,12 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.0141
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
-  - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
+  - 7E1.7E9.222104|fc=1:VOLKSWAGEN_ATF_T
+  - 7E1.7E9.223841|fc=1:VOLKSWAGEN_ODO_3841,VOLKSWAGEN_ODO_TCM_1
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -141,10 +145,10 @@ unsupported_commands_by_ecu:
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
   - 710.77A.222AF7|fc=1:VOLKSWAGEN_AUX_BAT_AGE_CAP,VOLKSWAGEN_AUX_BAT_AGE_POW,VOLKSWAGEN_AUX_BAT_C,VOLKSWAGEN_AUX_BAT_CAP,VOLKSWAGEN_AUX_BAT_CHRG_TOT,VOLKSWAGEN_AUX_BAT_DSCH_TOT,VOLKSWAGEN_AUX_BAT_SOC,VOLKSWAGEN_AUX_BAT_T,VOLKSWAGEN_AUX_BAT_T_S,VOLKSWAGEN_AUX_BAT_V
   "713":
-  - 713.221800:VOLKSWAGEN_FL_VSS
-  - 713.221801:VOLKSWAGEN_FR_VSS
-  - 713.221802:VOLKSWAGEN_RL_VSS
-  - 713.221803:VOLKSWAGEN_RR_VSS
+  - 713.77D.221800|fc=1:VOLKSWAGEN_FL_VSS_V2,VOLKSWAGEN_FL_VSS_V2
+  - 713.77D.221801|fc=1:VOLKSWAGEN_FR_VSS_V2,VOLKSWAGEN_FR_VSS_V2
+  - 713.77D.221802|fc=1:VOLKSWAGEN_RL_VSS_V2,VOLKSWAGEN_RL_VSS_V2
+  - 713.77D.221803|fc=1:VOLKSWAGEN_RR_VSS_V2,VOLKSWAGEN_RR_VSS_V2
   - 713.77D.222B1B:VOLKSWAGEN_TIRE_FL_SPD_V3
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
@@ -202,34 +206,30 @@ unsupported_commands_by_ecu:
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   - 746.7B0.220800|fc=1:VOLKSWAGEN_AC_COMPRESSOR_PWR_ACT
-  - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
-  - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_T
-  - 746.7B0.222612|fc=1:VOLKSWAGEN_HVAC_EVAP_T
-  - 746.7B0.22263D|fc=1:VOLKSWAGEN_REAR_DEFL_T
+  - 746.7B0.22263D|fc=1:VOLKSWAGEN_CLIMATE_RR_DEFL_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   - 746.7B0.2242DB|fc=1:VOLKSWAGEN_CO2_CONTENT_INTERIOR
   - 746.7B0.224EEF|fc=1:VOLKSWAGEN_AC_REFRIG_P_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1,VOLKSWAGEN_AC_REFRIG_T_SENS1_INT
   - 746.7B0.22F449|fc=1:VOLKSWAGEN_APP_D
   "7E0":
+  - 7E0.221156|din=03:VOLKSWAGEN_DIST_SINCE_LAST_REGEN_,VOLKSWAGEN_HVBAT_SOC
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
   - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
-  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_V4
-  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
-  - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2
+  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_10E0,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRE_6
+  - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2,VOLKSWAGEN_MISFIRE_4
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
-  - 7E0.7E8.221156:VOLKSWAGEN_HVBAT_SOC_V2
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
-  - 7E0.7E8.22115B:VOLKSWAGEN_VSS_DIR
+  - 7E0.7E8.22115B:VOLKSWAGEN_FIELD_REGEN_REQUEST_STATUS,VOLKSWAGEN_VSS_DIR
   - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
-  - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP
-  - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
-  - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
+  - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP,VOLKSWAGEN_I_DURATION
+  - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT,VOLKSWAGEN_OIL_LVL_WARN_THRESHOLD_11BB
+  - 7E0.7E8.2211BD:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_OIL_LEVEL_WARN
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
@@ -313,7 +313,7 @@ unsupported_commands_by_ecu:
   - 7E5.225174|din=03:VOLKSWAGEN_BMS_V_CHG_DYN_MIN
   - 7E5.225175|din=03:VOLKSWAGEN_BMS_V_DCHG_DYN_MIN
   - 7E5.2280EC|din=03:VOLKSWAGEN_BMS_COOL_PUMP_CTL
-  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC
+  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC_V2
   - 7E5.7ED.221801:VOLKSWAGEN_HVBAT_VOLT
   - 7E5.7ED.221840|din=03:VOLKSWAGEN_HVBAT_MOD32_T1,VOLKSWAGEN_HVBAT_MOD32_T2,VOLKSWAGEN_HVBAT_MOD32_T3
   - 7E5.7ED.221841|din=03:VOLKSWAGEN_HVBAT_MOD33_T1,VOLKSWAGEN_HVBAT_MOD33_T2,VOLKSWAGEN_HVBAT_MOD33_T3
@@ -545,7 +545,7 @@ unsupported_commands_by_ecu:
   - FC00.FE007C.220308|ta=7C,c=17:VOLKSWAGEN_CALC_FROM_MEAS_IS
   - FC00.FE007C.220805|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_ECU_T_1
   - FC00.FE007C.220806|ta=7C,c=17:VOLKSWAGEN_ELDRIVE_ECU_T_2
-  - FC00.FE007C.22086D|ta=7C,c=17:VOLKSWAGEN_ODO_V3
+  - FC00.FE007C.22086D|ta=7C,c=17:VOLKSWAGEN_ODO_V4
   - FC00.FE007C.221007|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_D_ACT
   - FC00.FE007C.221008|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_Q_ACT
   - FC00.FE007C.221009|ta=7C,c=17:VOLKSWAGEN_MOTOR_V_D_CMD
