--- a/tests/test_cases/2021/commands/710.77A.222A0F|fc=1.yaml
+++ b/tests/test_cases/2021/commands/710.77A.222A0F|fc=1.yaml
@@ -1,8 +1,8 @@
-command_id: 710.77A.222A0F
+command_id: 710.77A.222A0F|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 28
+    VOLKSWAGEN_USE_BAT_CHG: 28
   response: 77A04622A0F1C
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 100
+    VOLKSWAGEN_USE_BAT_CHG: 100
   response: 77A04622A0F64
