--- a/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.221014|fc=1.yaml
@@ -1,8 +1,10 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: -1
+    VOLKSWAGEN_AAT: 48
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: -1
   response: '77E0462101462'
 - expected_values:
-    VOLKSWAGEN_AAT: 38
+    VOLKSWAGEN_AAT: 126
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 38
   response: 77E04621014B0
