--- a/tests/test_cases/2021/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222605|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 0
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 0
   response: 7B00462260500
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 10.2
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 10.2
   response: 7B00462260533
