--- a/tests/test_cases/2021/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222613|fc=1.yaml
@@ -1,11 +1,14 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 0
     VOLKSWAGEN_HVAC_IAT: 0
   response: 7B0056226130000
 - expected_values:
-    VOLKSWAGEN_HVAC_IAT: 25.3
-  response: 7B00562261300FD
+    VOLKSWAGEN_CABIN_T: 25.4
+    VOLKSWAGEN_HVAC_IAT: 25.4
+  response: 7B00562261300FE
 - expected_values:
-    VOLKSWAGEN_HVAC_IAT: 27.4
-  response: 7B0056226130112
+    VOLKSWAGEN_CABIN_T: 25.8
+    VOLKSWAGEN_HVAC_IAT: 25.8
+  response: 7B0056226130102
