--- a/tests/test_cases/2022/commands/710.77A.222A0F|fc=1.yaml
+++ b/tests/test_cases/2022/commands/710.77A.222A0F|fc=1.yaml
@@ -1,32 +1,32 @@
-command_id: 710.77A.222A0F
+command_id: 710.77A.222A0F|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 22
+    VOLKSWAGEN_USE_BAT_CHG: 22
   response: 77A04622A0F16
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 23
+    VOLKSWAGEN_USE_BAT_CHG: 23
   response: 77A04622A0F17
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 24
+    VOLKSWAGEN_USE_BAT_CHG: 24
   response: 77A04622A0F18
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 25
+    VOLKSWAGEN_USE_BAT_CHG: 25
   response: 77A04622A0F19
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 26
+    VOLKSWAGEN_USE_BAT_CHG: 26
   response: 77A04622A0F1A
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 27
+    VOLKSWAGEN_USE_BAT_CHG: 27
   response: 77A04622A0F1B
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 28
+    VOLKSWAGEN_USE_BAT_CHG: 28
   response: 77A04622A0F1C
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 29
+    VOLKSWAGEN_USE_BAT_CHG: 29
   response: 77A04622A0F1D
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 30
+    VOLKSWAGEN_USE_BAT_CHG: 30
   response: 77A04622A0F1E
 - expected_values:
-    VOLKSWAGEN_SSB_AH: 31
+    VOLKSWAGEN_USE_BAT_CHG: 31
   response: 77A04622A0F1F
