--- a/tests/test_cases/2022/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2022/commands/714.77E.221014|fc=1.yaml
@@ -1,8 +1,10 @@
 command_id: 714.77E.221014|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_AAT: 6.5
+    VOLKSWAGEN_AAT: 63
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 6.5
   response: '77E0462101471'
 - expected_values:
-    VOLKSWAGEN_AAT: 21
+    VOLKSWAGEN_AAT: 92
+    VOLKSWAGEN_DASH_AMBIENT_AIR_T: 21
   response: 77E046210148E
