--- a/tests/test_cases/2022/commands/746.7B0.222605|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222605|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.222605|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 6.8
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 6.8
   response: 7B00462260522
 - expected_values:
-    VOLKSWAGEN_REFRIG_P: 11.6
+    VOLKSWAGEN_CLIMATE_REFRIG_P: 11.6
   response: 7B0046226053A
