--- a/tests/test_cases/2022/commands/746.7B0.222612|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222612|fc=1.yaml
@@ -1,14 +1,18 @@
 command_id: 746.7B0.222612|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 48
   response: 7B00562261201E0
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 49
   response: 7B00562261201EA
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.333
     VOLKSWAGEN_HVAC_EVAP_T: 50
   response: 7B00562261201F4
 - expected_values:
+    VOLKSWAGEN_CLIMATE_T_AFTER_EVAP: 0.666
     VOLKSWAGEN_HVAC_EVAP_T: 52
   response: 7B0056226120208
