--- a/tests/test_cases/2022/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.222613|fc=1.yaml
@@ -1,23 +1,30 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 31.8
     VOLKSWAGEN_HVAC_IAT: 31.8
   response: 7B005622613013E
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 31.9
     VOLKSWAGEN_HVAC_IAT: 31.9
   response: 7B005622613013F
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 32
     VOLKSWAGEN_HVAC_IAT: 32
   response: 7B0056226130140
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 32.1
     VOLKSWAGEN_HVAC_IAT: 32.1
   response: 7B0056226130141
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 32.3
     VOLKSWAGEN_HVAC_IAT: 32.3
   response: 7B0056226130143
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 32.6
     VOLKSWAGEN_HVAC_IAT: 32.6
   response: 7B0056226130146
 - expected_values:
+    VOLKSWAGEN_CABIN_T: 32.9
     VOLKSWAGEN_HVAC_IAT: 32.9
   response: 7B0056226130149
