--- a/tests/test_cases/2022/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2022/commands/746.7B0.2226ED|fc=1.yaml
@@ -2,16 +2,21 @@ command_id: 746.7B0.2226ED|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0
   response: 7B0046226ED00
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.1
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.1
   response: 7B0046226ED01
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.2
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.2
   response: 7B0046226ED02
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.3
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 0.3
   response: 7B0046226ED03
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 1.4
+    VOLKSWAGEN_CLIMATE_AIR_POLUTION_LVL: 1.4
   response: 7B0046226ED0E
