--- a/tests/test_cases/2023/command_support.yaml
+++ b/tests/test_cases/2023/command_support.yaml
@@ -1,12 +1,12 @@
 model_year: 2023
 supported_commands_by_ecu:
   "710":
-  - 710.77A.222A07:VOLKSWAGEN_SSB_V
-  - 710.77A.222A0B:VOLKSWAGEN_SSB_T
-  - 710.77A.222A0C:VOLKSWAGEN_SSB_SOC
-  - 710.77A.222A0E:VOLKSWAGEN_SSB_R
-  - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
-  - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
+  - 710.77A.222A07|fc=1:VOLKSWAGEN_BAT_V_2A07,VOLKSWAGEN_SSB_V
+  - 710.77A.222A0B|fc=1:VOLKSWAGEN_BAT_T
+  - 710.77A.222A0C|fc=1:VOLKSWAGEN_BAT_CHG_LVL,VOLKSWAGEN_SSB_SOC
+  - 710.77A.222A0E|fc=1:VOLKSWAGEN_BAT_INT_R,VOLKSWAGEN_SSB_R
+  - 710.77A.222A0F|fc=1:VOLKSWAGEN_USE_BAT_CHG
+  - 710.77A.222A10|fc=1:VOLKSWAGEN_BAT_V_AT_REST
   "7E0":
   - 0101:ACRF_RDY,ACRF_SUP,AIR_RDY,AIR_SUP,CAT_RDY,CAT_SUP,CCM_RDY,CCM_SUP,CIM_SUP,DTC_CNT,EGR_RDY,EGR_SUP,EVAP_RDY,EVAP_SUP,FUEL_RDY,FUEL_SUP,HCAT_RDY,HCAT_SUP,HTR_RDY,HTR_SUP,MIL,MIS_RDY,MIS_SUP,O2S_RDY,O2S_SUP
   - 0103:FUELSYS1,FUELSYS2
@@ -53,16 +53,17 @@ supported_commands_by_ecu:
   - 7E0.0142:VPWR
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
-  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_V4
-  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
-  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
+  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V3
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_10E0,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1,VOLKSWAGEN_MISFIRE_3
+  - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2,VOLKSWAGEN_MISFIRE_6
   - 7E0.7E8.221158:VOLKSWAGEN_MAX_DCHA_CUR_2
   - 7E0.7E8.221159:VOLKSWAGEN_MAX_CHA_CUR_2
+  - 7E0.7E8.22115B:VOLKSWAGEN_FIELD_REGEN_REQUEST_STATUS,VOLKSWAGEN_VSS_DIR
   - 7E0.7E8.221160:VOLKSWAGEN_ODO_HD
-  - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
-  - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
-  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
+  - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT,VOLKSWAGEN_OIL_LVL_WARN_THRESHOLD_11BB
+  - 7E0.7E8.2211BD:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_OIL_LEVEL_WARN
+  - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2,VOLKSWAGEN_EOT_V3
   - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
@@ -79,10 +80,10 @@ supported_commands_by_ecu:
   - 0142:VPWR
   - 0149:APP_D
   - 7E1.22101A:VOLKSWAGEN_ODO_TCM_2
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
+  - 7E1.7E9.223841|fc=1:VOLKSWAGEN_ODO_3841,VOLKSWAGEN_ODO_TCM_1
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -96,10 +97,10 @@ unsupported_commands_by_ecu:
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
   "713":
-  - 713.221800:VOLKSWAGEN_FL_VSS
-  - 713.221801:VOLKSWAGEN_FR_VSS
-  - 713.221802:VOLKSWAGEN_RL_VSS
-  - 713.221803:VOLKSWAGEN_RR_VSS
+  - 713.77D.221800|fc=1:VOLKSWAGEN_FL_VSS_V2,VOLKSWAGEN_FL_VSS_V2
+  - 713.77D.221801|fc=1:VOLKSWAGEN_FR_VSS_V2,VOLKSWAGEN_FR_VSS_V2
+  - 713.77D.221802|fc=1:VOLKSWAGEN_RL_VSS_V2,VOLKSWAGEN_RL_VSS_V2
+  - 713.77D.221803|fc=1:VOLKSWAGEN_RR_VSS_V2,VOLKSWAGEN_RR_VSS_V2
   - 713.77D.222B1B:VOLKSWAGEN_TIRE_FL_SPD_V3
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
@@ -113,7 +114,7 @@ unsupported_commands_by_ecu:
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
-  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
+  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT,VOLKSWAGEN_DASH_AMBIENT_AIR_T
   - 714.77E.2222E0:VOLKSWAGEN_RANGE_DSP
   "715":
   - 715.222353:VOLKSWAGEN_CRASH_FRONT,VOLKSWAGEN_CRSH_FRONT
@@ -126,16 +127,15 @@ unsupported_commands_by_ecu:
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   "7E0":
+  - 7E0.221156|din=03:VOLKSWAGEN_DIST_SINCE_LAST_REGEN_,VOLKSWAGEN_HVBAT_SOC
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
-  - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
-  - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2
+  - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1,VOLKSWAGEN_MISFIRE_2
+  - 7E0.7E8.221154:VOLKSWAGEN_EM_TORQ_2,VOLKSWAGEN_MISFIRE_4
   - 7E0.7E8.221155:VOLKSWAGEN_EM_TORQ_3
-  - 7E0.7E8.221156:VOLKSWAGEN_HVBAT_SOC_V2
-  - 7E0.7E8.22115B:VOLKSWAGEN_VSS_DIR
-  - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP
+  - 7E0.7E8.221164:VOLKSWAGEN_HVBAT_SOC_DISP,VOLKSWAGEN_I_DURATION
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
@@ -153,7 +153,7 @@ unsupported_commands_by_ecu:
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
-  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC
+  - 7E5.7ED.22028C:VOLKSWAGEN_BMS_SOC,VOLKSWAGEN_HVBAT_SOC_V2
   - 7E5.7ED.221801:VOLKSWAGEN_HVBAT_VOLT
   - 7E5.7ED.221850:VOLKSWAGEN_HVBAT_MOD1_C1_SOC,VOLKSWAGEN_HVBAT_MOD1_C1_V,VOLKSWAGEN_HVBAT_MOD1_C2_SOC,VOLKSWAGEN_HVBAT_MOD1_C2_V,VOLKSWAGEN_HVBAT_MOD1_C3_SOC,VOLKSWAGEN_HVBAT_MOD1_C3_V,VOLKSWAGEN_HVBAT_MOD1_C4_SOC,VOLKSWAGEN_HVBAT_MOD1_C4_V,VOLKSWAGEN_HVBAT_MOD1_C5_SOC,VOLKSWAGEN_HVBAT_MOD1_C5_V,VOLKSWAGEN_HVBAT_MOD1_C6_SOC,VOLKSWAGEN_HVBAT_MOD1_C6_V,VOLKSWAGEN_HVBAT_MOD1_ID
   - 7E5.7ED.221851:VOLKSWAGEN_HVBAT_MOD2_C1_SOC,VOLKSWAGEN_HVBAT_MOD2_C1_V,VOLKSWAGEN_HVBAT_MOD2_C2_SOC,VOLKSWAGEN_HVBAT_MOD2_C2_V,VOLKSWAGEN_HVBAT_MOD2_C3_SOC,VOLKSWAGEN_HVBAT_MOD2_C3_V,VOLKSWAGEN_HVBAT_MOD2_C4_SOC,VOLKSWAGEN_HVBAT_MOD2_C4_V,VOLKSWAGEN_HVBAT_MOD2_C5_SOC,VOLKSWAGEN_HVBAT_MOD2_C5_V,VOLKSWAGEN_HVBAT_MOD2_C6_SOC,VOLKSWAGEN_HVBAT_MOD2_C6_V,VOLKSWAGEN_HVBAT_MOD2_ID
