--- a/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0B|fc=1.yaml
@@ -1,5 +1,5 @@
-command_id: 710.77A.222A0B
+command_id: 710.77A.222A0B|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_SSB_T: 32
+    VOLKSWAGEN_BAT_T: 32
   response: 77A04622A0B48
