--- a/tests/test_cases/2023/commands/710.77A.222A0E|fc=1.yaml
+++ b/tests/test_cases/2023/commands/710.77A.222A0E|fc=1.yaml
@@ -1,5 +1,6 @@
-command_id: 710.77A.222A0E
+command_id: 710.77A.222A0E|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_BAT_INT_R: 5.2
     VOLKSWAGEN_SSB_R: 5.2
   response: 77A04622A0E1A
