--- a/tests/test_cases/2021/commands/7E0.22F469|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22F469|din=03.yaml
@@ -9,19 +9,24 @@ test_cases:
     VOLKSWAGEN_VAR_1: 0
   response: |-
     7E8100A62F4693F0000
-    7E821803B3C82555555
+    7E8218076757F555555
 - expected_values:
-    VOLKSWAGEN_VAR_1: 36
+    VOLKSWAGEN_VAR_1: 0
   response: |-
-    7E8100A62F4693F2428
-    7E8218E2B2C82555555
+    7E8100A62F4693F0001
+    7E821FF4F5183555555
 - expected_values:
-    VOLKSWAGEN_VAR_1: 48
+    VOLKSWAGEN_VAR_1: 32
   response: |-
-    7E8100A62F4693F3031
-    7E821825B5A7F555555
+    7E8100A62F4693F2021
+    7E821844F4F80555555
 - expected_values:
-    VOLKSWAGEN_VAR_1: 96
+    VOLKSWAGEN_VAR_1: 53
   response: |-
-    7E8100A62F4693F6062
-    7E82182313282555555
+    7E8100A62F4693F3532
+    7E8217971707F555555
+- expected_values:
+    VOLKSWAGEN_VAR_1: 0
+  response: |-
+    7E8100A62F4693F8F90
+    7E82180545581555555
