--- a/tests/test_cases/2021/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221139.yaml
@@ -7,5 +7,5 @@ test_cases:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 7.67
   response: 7E80562113902FF
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 24.25
-  response: '7E8056211390979'
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 37.46
+  response: 7E8056211390EA2
