--- a/tests/test_cases/2021/commands/7E0.7E8.221169.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221169.yaml
@@ -4,14 +4,14 @@ test_cases:
     VOLKSWAGEN_FUEL_HIGH_P_ACT: 302800
   response: 7E8056211690BD4
 - expected_values:
-    VOLKSWAGEN_FUEL_HIGH_P_ACT: 316200
-  response: 7E8056211690C5A
+    VOLKSWAGEN_FUEL_HIGH_P_ACT: 313600
+  response: 7E8056211690C40
 - expected_values:
     VOLKSWAGEN_FUEL_HIGH_P_ACT: 332400
   response: 7E8056211690CFC
 - expected_values:
-    VOLKSWAGEN_FUEL_HIGH_P_ACT: 692600
-  response: 7E8056211691B0E
+    VOLKSWAGEN_FUEL_HIGH_P_ACT: 1254400
+  response: '7E8056211693100'
 - expected_values:
-    VOLKSWAGEN_FUEL_HIGH_P_ACT: 1251800
-  response: 7E80562116930E6
+    VOLKSWAGEN_FUEL_HIGH_P_ACT: 1663000
+  response: 7E80562116940F6
