--- a/tests/test_cases/2021/commands/7E0.7E8.2212FE.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2212FE.yaml
@@ -1,11 +1,17 @@
 command_id: 7E0.7E8.2212FE
 test_cases:
 - expected_values:
+    VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE: 0
+  response: 7E8056212FE0000
+- expected_values:
     VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE: -0.74708
   response: 7E8056212FEFFDE
 - expected_values:
     VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE: -0.54932
   response: 7E8056212FEFFE7
+- expected_values:
+    VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE: -0.35157
+  response: 7E8056212FEFFF0
 - expected_values:
     VOLKSWAGEN_CAM_ADAPT_INT_BNK_1_PHASE_POS_12FE: -0.28565
   response: 7E8056212FEFFF3
