--- a/tests/test_cases/2021/commands/7E0.22100C|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22100C|din=03.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.22100C|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_FUEL_LVL: 24
+  response: 7E80562100C0960
+- expected_values:
     VOLKSWAGEN_FUEL_LVL: 25
   response: 7E80562100C09C4
 - expected_values:
