--- a/tests/test_cases/2021/commands/7E0.2210F9|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.2210F9|din=03.yaml
@@ -4,6 +4,9 @@ test_cases:
     VOLKSWAGEN_DPF_OUTPUT_GAS_T: 53.1
   response: 7E8056210F90CBE
 - expected_values:
+    VOLKSWAGEN_DPF_OUTPUT_GAS_T: 64.7
+  response: 7E8056210F90D32
+- expected_values:
     VOLKSWAGEN_DPF_OUTPUT_GAS_T: 75.2
   response: 7E8056210F90D9B
 - expected_values:
@@ -18,3 +21,12 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DPF_OUTPUT_GAS_T: 179.8
   response: 7E8056210F911B1
+- expected_values:
+    VOLKSWAGEN_DPF_OUTPUT_GAS_T: 190.8
+  response: 7E8056210F9121F
+- expected_values:
+    VOLKSWAGEN_DPF_OUTPUT_GAS_T: 208.6
+  response: 7E8056210F912D1
+- expected_values:
+    VOLKSWAGEN_DPF_OUTPUT_GAS_T: 241.6
+  response: 7E8056210F9141B
