--- a/tests/test_cases/2021/commands/7E0.22163C|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22163C|din=03.yaml
@@ -7,6 +7,12 @@ test_cases:
     VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.53
   response: 7E80562163C0099
 - expected_values:
+    VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.58
+  response: 7E80562163C009E
+- expected_values:
+    VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.59
+  response: 7E80562163C009F
+- expected_values:
     VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.68
   response: 7E80562163C00A8
 - expected_values:
@@ -15,3 +21,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.8
   response: 7E80562163C00B4
+- expected_values:
+    VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.88
+  response: 7E80562163C00BC
