--- a/tests/test_cases/2021/commands/7E0.7E8.22100D.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22100D.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_GEAR_ENG: 7
   response: 7E80462100D07
+- expected_values:
+    VOLKSWAGEN_GEAR_ENG: 255
+  response: 7E80462100DFF
