--- a/tests/test_cases/2021/commands/7E0.7E8.221026.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221026.yaml
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_AIR_MASS_ACT: 229
   response: 7E80562102608F2
 - expected_values:
-    VOLKSWAGEN_AIR_MASS_ACT: 520.9
-  response: '7E8056210261459'
+    VOLKSWAGEN_AIR_MASS_ACT: 762.8
+  response: 7E8056210261DCC
