--- a/tests/test_cases/2021/commands/7E0.7E8.221057.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221057.yaml
@@ -1,8 +1,8 @@
 command_id: 7E0.7E8.221057
 test_cases:
 - expected_values:
-    VOLKSWAGEN_CHG_P: 4.058
-  response: 7E8056210570FDA
+    VOLKSWAGEN_CHG_P: 1.844
+  response: '7E8056210570734'
 - expected_values:
     VOLKSWAGEN_CHG_P: 5.117
   response: 7E80562105713FD
@@ -10,5 +10,5 @@ test_cases:
     VOLKSWAGEN_CHG_P: 5.378
   response: '7E8056210571502'
 - expected_values:
-    VOLKSWAGEN_CHG_P: 7.723
-  response: 7E8056210571E2B
+    VOLKSWAGEN_CHG_P: 10.172
+  response: 7E80562105727BC
