--- a/tests/test_cases/2021/commands/7E0.7E8.2210E6.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.2210E6.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.7E8.2210E6
 test_cases:
 - expected_values:
+    VOLKSWAGEN_KNOCK_RETARD_2: 2.25
+  response: 7E8056210E603E7
+- expected_values:
     VOLKSWAGEN_KNOCK_RETARD_2: 4.5
   response: 7E8056210E606AD
 - expected_values:
@@ -8,7 +11,7 @@ test_cases:
   response: 7E8056210E60C0E
 - expected_values:
     VOLKSWAGEN_KNOCK_RETARD_2: 9.75
-  response: 7E8056210E60DF2
+  response: 7E8056210E60DFF
 - expected_values:
     VOLKSWAGEN_KNOCK_RETARD_2: 10.5
-  response: 7E8056210E60EDA
+  response: 7E8056210E60E2F
