Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.22105C|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22105C|din=03.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.22105C|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_GENERATOR_LOAD: 22.57
+  response: 7E80562105C08D1
+- expected_values:
     VOLKSWAGEN_GENERATOR_LOAD: 25.79
   response: 7E80562105C0A13
 - expected_values:
