--- a/tests/test_cases/2021/commands/7E0.22163C|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.22163C|din=03.yaml
@@ -24,3 +24,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 1.88
   response: 7E80562163C00BC
+- expected_values:
+    VOLKSWAGEN_POSTINJ_1_QTY_SPEC: 2.5
+  response: 7E80562163C00FA
