--- a/tests/test_cases/2021/commands/7E0.7E8.221104.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221104.yaml
@@ -6,3 +6,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_3: -0.03
   response: 7E805621104FFFD
+- expected_values:
+    VOLKSWAGEN_INJ_QUANTITY_DEVIATION_CYLINDER_3: -0.01
+  response: 7E805621104FFFF
