Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/767.7D1.220838|fc=1.yaml
+++ b/tests/test_cases/2021/commands/767.7D1.220838|fc=1.yaml
@@ -1,6 +1,14 @@
 command_id: 767.7D1.220838|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_ECALL_SOC: 94
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D105620838025E
+- expected_values:
     VOLKSWAGEN_ECALL_SOC: 95
     VOLKSWAGEN_ECALL_STATUS: NORMAL
   response: 7D105620838025F
+- expected_values:
+    VOLKSWAGEN_ECALL_SOC: 96
+    VOLKSWAGEN_ECALL_STATUS: NORMAL
+  response: 7D1056208380260
