Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.0110.yaml
+++ b/tests/test_cases/2021/commands/7E0.0110.yaml
@@ -7,5 +7,5 @@ test_cases:
     MAF: 10.22
   response: 7E804411003FE
 - expected_values:
-    MAF: 81.11
-  response: 7E80441101FAF
+    MAF: 124.41
+  response: '7E80441103099'
