--- a/tests/test_cases/2021/commands/7E0.7E8.221139.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.221139.yaml
@@ -7,5 +7,5 @@ test_cases:
     VOLKSWAGEN_MEAN_INJ_QUANTITY: 7.67
   response: 7E80562113902FF
 - expected_values:
-    VOLKSWAGEN_MEAN_INJ_QUANTITY: 41.87
-  response: 7E805621139105B
+    VOLKSWAGEN_MEAN_INJ_QUANTITY: 64.85
+  response: '7E8056211391955'
