Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
+++ b/tests/test_cases/2021/commands/714.77E.22224B|fc=1.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 132
   response: 77E0562224B0084
+- expected_values:
+    VOLKSWAGEN_DASH_OIL_THERMAL_WEAR: 133
+  response: 77E0562224B0085
