--- a/tests/test_cases/2021/commands/7E0.7E8.22121E.yaml
+++ b/tests/test_cases/2021/commands/7E0.7E8.22121E.yaml
@@ -4,8 +4,8 @@ test_cases:
     VOLKSWAGEN_SPEC_VALUE_RAIL_P: 0
   response: 7E80562121E0000
 - expected_values:
-    VOLKSWAGEN_SPEC_VALUE_RAIL_P: 281500
-  response: 7E80562121E0AFF
+    VOLKSWAGEN_SPEC_VALUE_RAIL_P: 1919900
+  response: 7E80562121E4AFF
 - expected_values:
     VOLKSWAGEN_SPEC_VALUE_RAIL_P: 3267600
   response: 7E80562121E7FA4
