Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
+++ b/tests/test_cases/2021/commands/746.7B0.222607|fc=1.yaml
@@ -10,6 +10,9 @@ test_cases:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 26
   response: 7B00462260741
 - expected_values:
+    VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 26.4
+  response: 7B00462260742
+- expected_values:
     VOLKSWAGEN_CLIMATE_RAD_FAN_CMD_DUTY: 27.2
   response: 7B00462260744
 - expected_values:
