Update command data for Volkswagen/T-Roc

--- a/tests/test_cases/2021/commands/7E0.221044|din=03.yaml
+++ b/tests/test_cases/2021/commands/7E0.221044|din=03.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.221044|din=03
 test_cases:
 - expected_values:
+    VOLKSWAGEN_DPF_SFC_T: 6.5
+  response: 7E8056210440AEC
+- expected_values:
     VOLKSWAGEN_DPF_SFC_T: 22.5
   response: 7E8056210440B8C
 - expected_values:
